--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,7 +1,12 @@
 name: CI
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - main
 
 jobs:
   build:
