--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,12 +28,13 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{env.DOCKERHUB_REPO}}:${{ github.run_number }}
+          tags: ${{env.DOCKERHUB_REPO}}:${{ github.run_number }}, ${{ env.DOCKERHUB_REPO }}:latest
 
+    # # Starting Workflow 2 to update K8s manifest
     # - name: Repository Dispatch
     #   uses: peter-evans/repository-dispatch@v1
     #   with:
     #     token: ${{ secrets.PAT }}
-    #     repository: ${{ github.actor }}/argocd-node-app-config
+    #     repository: seungwoo-ji/argocd-node-app-config
     #     event-type: new-image
-    #     client-payload: '{"image": "${{ github.actor }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}"}'
+    #     client-payload: '{"image": "${{env.DOCKERHUB_REPO}}:latest"}'
